plugins {
	id 'org.springframework.boot' version '2.7.5-SNAPSHOT'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
	id 'java'
	id "io.freefair.lombok" version "6.5.1"
}

group = 'com.gocity'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-graphql'

	testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.graphql:spring-graphql-test'
	testImplementation 'commons-io:commons-io:2.11.0'

	testImplementation 'au.com.dius.pact.provider:junit5:4.3.16'
	testImplementation 'au.com.dius.pact.consumer:junit5:4.3.16'

	// Ignore for now part need to fix WebTestClient - will remove later.
	runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.1.84.Final:osx-aarch_64'
}

tasks.named('test') {
	useJUnitPlatform()
}
